[package]
name = "peach-stats"
version = "0.1.0"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"
description = "Query system statistics using JSON-RPC over HTTP. Provides a JSON-RPC wrapper around the probes and systemstat crates."
homepage = "https://opencollective.com/peachcloud"
repository = "https://github.com/peachcloud/peach-stats"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false

[package.metadata.deb]
depends = "$auto"
extended-description = """\
peach-stats is a system statistics microservice module for PeachCloud. \
Query system statistics using JSON-RPC over HTTP. Provides a JSON-RPC \
wrapper around the probes and systemstat crates."""
maintainer-scripts="debian"
assets = [
    ["target/release/peach-stats", "usr/bin/", "755"],
    ["debian/peach-stats.service", "/lib/systemd/system/peach-stats.service", "644"],
    ["README.md", "usr/share/doc/peach-stats/README", "644"],
]

[badges]
travis-ci = { repository = "peachcloud/peach-stats", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
env_logger = "0.6.1"
jsonrpc-core = "14.2"
jsonrpc-http-server = "14.2"
jsonrpc-test = "14.2"
log = "0.4.0"
probes = "0.3.0"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.39"
snafu = "0.4.1"
systemstat = "0.1.4"
